app name modification commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aroy89.github.io/todo-app",
+  "homepage": "http://aroy89.github.io/todo",
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
